ros2_wshesh/log/build_2025-09-10_16-31-36/turtle_pkg/stdout_stderr.log
running egg_info
writing ../../build/turtle_pkg/turtle_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/turtle_pkg/turtle_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/turtle_pkg/turtle_pkg.egg-info/entry_points.txt
writing requirements to ../../build/turtle_pkg/turtle_pkg.egg-info/requires.txt
writing top-level names to ../../build/turtle_pkg/turtle_pkg.egg-info/top_level.txt
reading manifest file '../../build/turtle_pkg/turtle_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/turtle_pkg/turtle_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying turtle_pkg/TurtleController.py -> /ros2_wshesh/build/turtle_pkg/build/lib/turtle_pkg
running install
running install_lib
copying /ros2_wshesh/build/turtle_pkg/build/lib/turtle_pkg/TurtleController.py -> /ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg
byte-compiling /ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg/TurtleController.py to TurtleController.cpython-312.pyc
  File "/ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg/TurtleController.py", line 8
    if movement == 'w' || movement =='A':        # forward
                        ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/turtle_pkg/turtle_pkg.egg-info to /ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg-0.0.0-py3.12.egg-info
running install_scripts
Installing controls_publisher script to /ros2_wshesh/install/turtle_pkg/lib/turtle_pkg
Installing turtle_controller script to /ros2_wshesh/install/turtle_pkg/lib/turtle_pkg
writing list of installed files to '/ros2_wshesh/build/turtle_pkg/install.log'
